--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -51,6 +51,7 @@
   &__slider {
     max-height: 100vh;
     min-height: 100vh;
+    height: 100vh;
     width: 100vw;
     background: white;
     position: fixed;
@@ -70,7 +71,7 @@
       &-container {
         min-width: 100%;
         width: 100vw;
-        height: auto;
+        height: 85%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -85,8 +86,6 @@
       display: flex;
       justify-content: center;
       background: white;
-      margin: auto auto;
-      border: 2px solid orange;
       box-sizing: border-box;
       position: relative;
     }
@@ -105,28 +104,62 @@
       &-container {
         width: 100%;
         height: 4rem;
-        border: 2px solid black;
         display: flex;
         justify-content: flex-end;
         align-items: center;
       }
     }
 
+    %btn-styles {
+      position: absolute;
+      width: 20%;
+      height: 40%;
+
+      top: 23%;
+      outline: none;
+      // border: none;
+    }
+
     &-button {
       &-left {
-        position: absolute;
-        width: 20%;
-        height: 80%;
-        background: none;
+        @extend %btn-styles;
+        background: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 0.6890951276102089) 10%,
+          rgba(252, 252, 252, 0) 60%
+        );
+        border: none;
         left: 0;
+
+        &-icon {
+          background: url("/assets/icons/left-arrow.png");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          width: 35px;
+          height: 35px;
+        }
       }
 
       &-right {
-        position: absolute;
-        width: 20%;
-        height: 80%;
-        background: none;
+        @extend %btn-styles;
+        background: rgb(252, 252, 252);
+        background: linear-gradient(
+          90deg,
+          rgba(252, 252, 252, 0) 40%,
+          rgba(0, 0, 0, 0.6890951276102089) 90%
+        );
+        border: none;
         right: 0;
+
+        &-icon {
+          background: url("/assets/icons/right-arrow.png");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          width: 35px;
+          height: 35px;
+        }
       }
     }
 
