--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -382,6 +382,7 @@
 .products__slider {
   max-height: 100vh;
   min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   background: white;
   position: fixed;
@@ -409,7 +410,7 @@
 .products__slider-slide-container {
   min-width: 100%;
   width: 100vw;
-  height: auto;
+  height: 85%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -436,8 +437,6 @@
       -ms-flex-pack: center;
           justify-content: center;
   background: white;
-  margin: auto auto;
-  border: 2px solid orange;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
@@ -458,7 +457,6 @@
 .products__slider-close-btn-container {
   width: 100%;
   height: 4rem;
-  border: 2px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -470,20 +468,45 @@
           align-items: center;
 }
 
-.products__slider-button-left {
+.products__slider .products__slider-button-left, .products__slider .products__slider-button-right {
   position: absolute;
   width: 20%;
-  height: 80%;
-  background: none;
+  height: 40%;
+  top: 23%;
+  outline: none;
+}
+
+.products__slider-button-left {
+  background: -webkit-gradient(linear, left top, right top, color-stop(10%, rgba(0, 0, 0, 0.689095)), color-stop(60%, rgba(252, 252, 252, 0)));
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.689095) 10%, rgba(252, 252, 252, 0) 60%);
+  border: none;
   left: 0;
 }
 
+.products__slider-button-left-icon {
+  background: url("/assets/icons/left-arrow.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 35px;
+}
+
 .products__slider-button-right {
-  position: absolute;
-  width: 20%;
-  height: 80%;
-  background: none;
+  background: #fcfcfc;
+  background: -webkit-gradient(linear, left top, right top, color-stop(40%, rgba(252, 252, 252, 0)), color-stop(90%, rgba(0, 0, 0, 0.689095)));
+  background: linear-gradient(90deg, rgba(252, 252, 252, 0) 40%, rgba(0, 0, 0, 0.689095) 90%);
+  border: none;
   right: 0;
+}
+
+.products__slider-button-right-icon {
+  background: url("/assets/icons/right-arrow.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 35px;
 }
 
 .products__slider-info-wrapper {
