--- a/client/src/styles/_partials/_footer.scss
+++ b/client/src/styles/_partials/_footer.scss
@@ -3,7 +3,7 @@
 
 .footer {
   box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   padding: 0.5rem 1rem 3.2rem 1rem;
   height: 19rem;
