--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -4,7 +4,7 @@
 .products {
   box-sizing: border-box;
   max-width: 100vw;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   color: $text-color;
   background-color: $section-bg-color;
