--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -2,7 +2,7 @@
 @import "./fonts";
 
 .services {
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   overflow: hidden;
   background-color: $section-bg-color;
