--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -323,7 +323,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   max-width: 100vw;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   color: #404040;
   background-color: #f8f1de;
@@ -587,7 +587,7 @@
 }
 
 .services {
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   overflow: hidden;
   background-color: #f8f1de;
@@ -1195,7 +1195,7 @@
 .footer {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   padding: 0.5rem 1rem 3.2rem 1rem;
   height: 19rem;
