--- a/client/src/styles/_partials/_mobile-footer.scss
+++ b/client/src/styles/_partials/_mobile-footer.scss
@@ -28,6 +28,7 @@
   &__right-divider {
     font-size: 1rem;
     width: 20%;
+    max-width: 7.375rem;
     color: $inactive-lang-color;
     font-family: "Circular Std Book";
     display: flex;
