--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -147,7 +147,11 @@
   display: flex;
   height: 70vh;
   max-height: 32rem;
+  max-width: 40.125rem;
   position: relative;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .home-about__pic1 {
@@ -191,13 +195,16 @@
 
 .home-about__circular-pic1-container {
   position: absolute;
-  width: 70%;
+  width: 16.531rem;
   max-width: 16.531rem;
-  height: 58%;
+  height: 16.531rem;
   max-height: 16.531rem;
-  left: 29%;
-  margin-left: -50px;
+  margin-left: auto;
+  margin-right: auto;
   top: 20%;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .home-about__circular-pic1 {
@@ -906,6 +913,7 @@
 .mobile-footer__right-divider {
   font-size: 1rem;
   width: 20%;
+  max-width: 7.375rem;
   color: #b6b6b6;
   font-family: "Circular Std Book";
   display: -webkit-box;
