--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./fonts";
+@import "./breakpoints";
 
 .home-about {
   max-width: 100vw;
@@ -87,6 +88,9 @@
   &__about {
     &-container {
       margin-top: 3rem;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 48rem;
       padding: 0 1rem 0 1rem;
       color: $text-color;
     }
