--- a/client/src/styles/_partials/_mobile-footer.scss
+++ b/client/src/styles/_partials/_mobile-footer.scss
@@ -12,6 +12,12 @@
   padding: 0 1.5rem 0 1.5rem;
   box-sizing: border-box;
 
+  &__language {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__wrapper {
     display: flex;
     justify-content: space-between;
