--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -10,6 +10,12 @@
   background-color: $section-bg-color;
   padding: 1rem 1rem 1rem 1rem;
 
+  &__content-wrapper {
+    max-width: 48rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &__title {
     font-family: "Circular Std Black";
     width: 85%;
