--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import "_partials/contact";
 @import "_partials/footer";
 @import "_partials/mobile-nav";
+@import "_partials/breakpoints";
 
 body {
   max-width: 100vw;
