--- a/client/src/styles/_partials/_contact.scss
+++ b/client/src/styles/_partials/_contact.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./fonts";
+@import "./breakpoints";
 
 .contact {
   background-color: $section-bg-color;
@@ -23,6 +24,12 @@
     max-width: 15.875rem;
     color: $terranova-gray;
     font-size: $text-font-size-mobile;
+
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+      max-width: 46rem;
+    }
   }
 
   &__img {
@@ -32,10 +39,20 @@
     max-width: 15.875rem;
   }
 
+  &__text-wrapper {
+    @include tablet {
+      width: 50%;
+    }
+  }
+
   &__company-name {
     color: $terranova-orange;
 
     font-family: "Circular Std Bold";
+
+    @include tablet {
+      margin-top: 0;
+    }
   }
 
   &__office {
@@ -61,11 +78,14 @@
   &__map-form-wrapper {
     display: flex;
     flex-direction: column-reverse;
+    max-width: 46rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__map {
-    height: 104%;
-    width: 104%;
+    height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -94,7 +114,7 @@
       padding-top: 100%;
       position: relative;
       overflow: hidden;
-      border-radius: 180px;
+      border-radius: 400px;
     }
   }
 
@@ -137,6 +157,10 @@
       &:focus {
         border: 2px solid $text-color;
       }
+
+      @include tablet {
+        font-size: $paragraph-font-size-tablet;
+      }
     }
 
     &-textarea {
@@ -150,6 +174,10 @@
       outline: none;
       resize: none;
       margin-bottom: 1.2rem;
+
+      @include tablet {
+        font-size: $paragraph-font-size-tablet;
+      }
 
       &:focus {
         border: 2px solid $text-color;
@@ -169,6 +197,10 @@
       margin-left: auto;
       font-size: 0.8rem;
       letter-spacing: 1px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
