--- a/client/src/styles/_partials/_mobile-footer.scss
+++ b/client/src/styles/_partials/_mobile-footer.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./fonts";
+@import "./breakpoints";
 
 .mobile-footer {
   position: fixed;
@@ -34,12 +35,16 @@
   &__right-divider {
     font-size: 1rem;
     width: 20%;
-    max-width: 7.375rem;
+    max-width: 4.375rem;
     color: $inactive-lang-color;
     font-family: "Circular Std Book";
     display: flex;
     justify-content: space-between;
     justify-self: flex-end;
+
+    @include tablet {
+      margin-right: 4rem;
+    }
   }
 
   &__active-lang {
