--- a/client/src/styles/_partials/_mobile-nav.scss
+++ b/client/src/styles/_partials/_mobile-nav.scss
@@ -68,6 +68,7 @@
   width: 100vw;
   position: fixed;
   top: 0;
+  left: 0;
   background-color: black;
   z-index: 11;
   transition: opacity 0.2s ease-in;
