--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -42,6 +42,7 @@
 
       &:hover img {
         transform: scale(1);
+        cursor: pointer;
       }
     }
   }
@@ -52,6 +53,10 @@
     text-align: center;
     margin: 1rem auto 2rem auto;
     font-size: $paragraph-font-size-mobile;
+
+    @include tablet {
+      font-size: 1.5rem;
+    }
   }
 
   &__slider {
@@ -68,6 +73,17 @@
     overflow: hidden;
     z-index: 12;
 
+    @include tablet {
+      max-width: 48rem;
+      max-height: 39.25rem;
+      min-height: auto;
+      left: 50%;
+      top: 50%;
+      margin-top: -19.125rem;
+      margin-left: -24rem;
+      border-radius: 2rem;
+    }
+
     &-slide {
       width: 100%;
       height: auto;
@@ -75,13 +91,14 @@
 
       &-container {
         min-width: 100%;
-        width: 100vw;
+        width: 100%;
         height: 85%;
         display: flex;
         justify-content: center;
         align-items: center;
         overflow: hidden;
         transition: transform ease-out 0.5s;
+        margin: 0 auto 0 auto;
       }
     }
 
@@ -102,6 +119,10 @@
       width: 21px;
       z-index: 12;
 
+      @include tablet {
+        margin-top: 0.7rem;
+      }
+
       &:hover {
         cursor: pointer;
       }
@@ -112,6 +133,10 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+
+        @include tablet {
+          height: 3.2rem;
+        }
       }
     }
 
@@ -142,6 +167,7 @@
           background-size: cover;
           width: 35px;
           height: 35px;
+          margin: 0 auto 0 0;
         }
       }
 
@@ -163,7 +189,7 @@
           background-size: cover;
           width: 35px;
           height: 35px;
-          margin: 0 0 0 1.5rem;
+          margin: 0 0 0 auto;
         }
       }
     }
