--- a/client/src/styles/_partials/_variables.scss
+++ b/client/src/styles/_partials/_variables.scss
@@ -13,3 +13,7 @@ $subtitle-font-size-mobile: 2rem;
 $title-font-size-mobile: 1.125rem;
 $paragraph-font-size-mobile: 1rem;
 $text-font-size-mobile: 1.2rem;
+
+$title-font-size-tablet: 1.5rem;
+$subtitle-font-size-tablet: 2.3rem;
+$paragraph-font-size-tablet: 1.1rem;
