finished DESKTOP-VIEW NAV BAR

--- a/client/src/styles/_partials/_mobile-footer.scss
+++ b/client/src/styles/_partials/_mobile-footer.scss
@@ -13,6 +13,10 @@
   padding: 0 1.5rem 0 1.5rem;
   box-sizing: border-box;
 
+  @include desktop {
+    display: none;
+  }
+
   &__language {
     &:hover {
       cursor: pointer;
