--- a/client/src/styles/_partials/_header.scss
+++ b/client/src/styles/_partials/_header.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./breakpoints";
 
 .header {
   width: 100vw;
@@ -10,9 +11,26 @@
   z-index: 10;
   top: 0rem;
 
+  @include desktop {
+    height: 4rem;
+    align-items: center;
+  }
+
   &__logo {
     width: 12rem;
     height: auto;
+
+    @include desktop {
+      width: 19rem;
+    }
+
+    &-wrapper {
+      @include desktop {
+        width: 33.333%;
+        display: flex;
+        justify-content: center;
+      }
+    }
   }
 
   &__nav {
@@ -23,13 +41,68 @@
     align-items: center;
     width: 90vw;
 
+    @include desktop {
+      height: 3.4rem;
+      justify-content: space-between;
+      width: 100%;
+    }
+
     &-links {
       display: none;
+
+      @include desktop {
+        display: flex;
+        width: 33.333%;
+        height: 100%;
+      }
+    }
+  }
+
+  &__ul {
+    display: flex;
+    padding: 0;
+    list-style: none;
+    width: 80%;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+  }
+
+  &__li {
+    text-decoration: none;
+    color: $terranova-gray;
+    font-size: 0.95rem;
+  }
+
+  &__language {
+    margin-left: 0.7rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &-wrapper {
+      width: 20%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      font-size: 0.95rem;
+      height: 100%;
+      color: $inactive-lang-color;
     }
   }
 
   &__phone {
     display: none;
+    color: $terranova-gray;
+
+    @include desktop {
+      display: flex;
+      width: 33.333%;
+      justify-content: center;
+      font-size: 0.95rem;
+    }
   }
 
   &__nav-hamburger {
@@ -42,6 +115,16 @@
     &-wrapper {
       position: absolute;
       right: 1.3rem;
+
+      @include desktop {
+        display: none;
+      }
     }
+  }
+
+  &__active-lang {
+    color: $terranova-orange;
+    border-bottom: 1px solid $terranova-orange;
+    height: 1.08rem;
   }
 }
