--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -16,6 +16,13 @@
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+
+    @include desktop {
+      height: 100vh;
+      max-width: 90rem;
+      max-height: 63.25rem;
+      justify-content: space-between;
+    }
   }
 
   &__pic1 {
@@ -23,9 +30,13 @@
 
     &-container {
       width: 50%;
-
+      max-width: 35.687rem;
       height: auto;
       overflow: hidden;
+
+      @include desktop {
+        width: 35.687rem;
+      }
     }
   }
 
@@ -34,8 +45,13 @@
 
     &-container {
       width: 50%;
+      max-width: 35.687rem;
       display: flex;
       align-items: flex-end;
+
+      @include desktop {
+        width: 35.687rem;
+      }
     }
   }
 
@@ -70,6 +86,14 @@
     left: 0;
     right: 0;
     text-align: center;
+
+    @include desktop {
+      width: 35rem;
+      max-width: 35rem;
+      height: 35rem;
+      max-height: 35rem;
+      top: 20%;
+    }
   }
 
   &__circular-pic1 {
@@ -83,7 +107,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border-radius: 150px;
+      border-radius: 400px;
     }
   }
 
