--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -273,14 +273,32 @@
   margin-right: auto;
 }
 
+@media (min-width: 1440px) {
+  .home-about__pic-cluster {
+    height: 100vh;
+    max-width: 90rem;
+    max-height: 63.25rem;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .home-about__pic1 {
   width: 100%;
 }
 
 .home-about__pic1-container {
   width: 50%;
+  max-width: 35.687rem;
   height: auto;
   overflow: hidden;
+}
+
+@media (min-width: 1440px) {
+  .home-about__pic1-container {
+    width: 35.687rem;
+  }
 }
 
 .home-about__pic2 {
@@ -289,12 +307,19 @@
 
 .home-about__pic2-container {
   width: 50%;
+  max-width: 35.687rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+
+@media (min-width: 1440px) {
+  .home-about__pic2-container {
+    width: 35.687rem;
+  }
 }
 
 .home-about__home-title {
@@ -332,6 +357,16 @@
   text-align: center;
 }
 
+@media (min-width: 1440px) {
+  .home-about__circular-pic1-container {
+    width: 35rem;
+    max-width: 35rem;
+    height: 35rem;
+    max-height: 35rem;
+    top: 20%;
+  }
+}
+
 .home-about__circular-pic1 {
   width: 75%;
 }
@@ -350,7 +385,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 150px;
+  border-radius: 400px;
 }
 
 .home-about__about-container {
