--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -260,6 +260,12 @@
   margin-bottom: 2.2rem;
 }
 
+@media (min-width: 1440px) {
+  .home-about {
+    position: relative;
+  }
+}
+
 .home-about__pic-cluster {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -276,7 +282,7 @@
 @media (min-width: 1440px) {
   .home-about__pic-cluster {
     height: 100vh;
-    max-width: 90rem;
+    max-width: 95rem;
     max-height: 63.25rem;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -290,7 +296,7 @@
 
 .home-about__pic1-container {
   width: 50%;
-  max-width: 35.687rem;
+  max-width: 34.687rem;
   height: auto;
   overflow: hidden;
 }
@@ -307,7 +313,7 @@
 
 .home-about__pic2-container {
   width: 50%;
-  max-width: 35.687rem;
+  max-width: 34.687rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -335,12 +341,31 @@
   }
 }
 
+@media (min-width: 1440px) {
+  .home-about__home-title {
+    font-size: 2.5rem;
+  }
+}
+
 .home-about__home-title-container {
   width: 13.5rem;
   margin-left: auto;
   margin-right: auto;
   height: auto;
   padding-left: 1rem;
+  z-index: 1;
+}
+
+@media (min-width: 1440px) {
+  .home-about__home-title-container {
+    position: absolute;
+    top: 1%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding: 0;
+    width: 18rem;
+  }
 }
 
 .home-about__circular-pic1-container {
