--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./fonts";
+@import "./breakpoints";
 
 .products {
   box-sizing: border-box;
@@ -14,6 +15,10 @@
     max-width: 48rem;
     margin-left: auto;
     margin-right: auto;
+
+    @include desktop {
+      max-width: 80%;
+    }
   }
 
   &__title {
@@ -28,6 +33,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+
+    @include desktop {
+      flex-direction: row;
+    }
+  }
+
+  &__product-wrapper {
+    width: 21%;
   }
 
   &__product-category-img {
@@ -35,6 +48,10 @@
     width: 100%;
     transform: scale(1.2);
     transition: all 0.3s;
+
+    @include desktop {
+      width: 100%;
+    }
 
     &-container {
       overflow: hidden;
