--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -17,7 +17,12 @@
     margin-right: auto;
 
     @include desktop {
-      max-width: 80%;
+      max-width: 85%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -25,6 +30,14 @@
     font-family: "Circular Std Black";
     width: 85%;
     font-size: $subtitle-font-size-mobile;
+
+    @include desktop {
+      margin: 0 auto 3rem auto;
+      font-size: $subtitle-font-size-desktop;
+      width: 70%;
+      text-align: center;
+      line-height: 3.5rem;
+    }
   }
 
   &__products-wrapper {
@@ -36,11 +49,14 @@
 
     @include desktop {
       flex-direction: row;
+      justify-content: space-between;
     }
   }
 
   &__product-wrapper {
-    width: 21%;
+    @include desktop {
+      width: 23%;
+    }
   }
 
   &__product-category-img {
@@ -73,6 +89,11 @@
 
     @include tablet {
       font-size: 1.5rem;
+    }
+
+    @include desktop {
+      font-size: 1rem;
+      width: 90%;
     }
   }
 
