--- a/client/src/styles/_partials/_variables.scss
+++ b/client/src/styles/_partials/_variables.scss
@@ -17,3 +17,5 @@ $text-font-size-mobile: 1.2rem;
 $title-font-size-tablet: 1.5rem;
 $subtitle-font-size-tablet: 2.3rem;
 $paragraph-font-size-tablet: 1.1rem;
+
+$subtitle-font-size-desktop: 2.6rem;
