--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -434,7 +434,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    max-width: 80%;
+    max-width: 85%;
     padding: 0;
   }
 }
@@ -614,7 +614,21 @@
 
 @media (min-width: 1440px) {
   .products__content-wrapper {
-    max-width: 80%;
+    max-width: 85%;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -622,6 +636,16 @@
   font-family: "Circular Std Black";
   width: 85%;
   font-size: 2rem;
+}
+
+@media (min-width: 1440px) {
+  .products__title {
+    margin: 0 auto 3rem auto;
+    font-size: 2.6rem;
+    width: 70%;
+    text-align: center;
+    line-height: 3.5rem;
+  }
 }
 
 .products__products-wrapper {
@@ -645,11 +669,16 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
-.products__product-wrapper {
-  width: 21%;
+@media (min-width: 1440px) {
+  .products__product-wrapper {
+    width: 23%;
+  }
 }
 
 .products__product-category-img {
@@ -690,6 +719,13 @@
 @media (min-width: 768px) {
   .products__product-category-descr {
     font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .products__product-category-descr {
+    font-size: 1rem;
+    width: 90%;
   }
 }
 
