--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -971,12 +971,20 @@
   padding: 0 1rem 1rem 1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding-top: 3rem;
 }
 
 .services__content-wrapper {
   max-width: 48rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 1440px) {
+  .services__content-wrapper {
+    max-width: 75%;
+    padding-top: 0.5rem;
+  }
 }
 
 .services__text-wrapper1 {
@@ -1014,6 +1022,13 @@
   }
 }
 
+@media (min-width: 1440px) {
+  .services__subtitle {
+    width: 60%;
+    font-size: 2.6rem;
+  }
+}
+
 .services__paragraph-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1040,17 +1055,33 @@
   margin-top: 3rem;
 }
 
+@media (min-width: 1440px) {
+  .services__clusters-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .services__cluster1-content {
   max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media (min-width: 1440px) {
+  .services__cluster1-content {
+    max-width: 27rem;
+  }
+}
+
 .services__cluster1-imgs-container {
   width: 100%;
   padding-top: 100%;
   position: relative;
-  margin-bottom: 3rem;
 }
 
 .services__cluster1-wrapper {
@@ -1164,6 +1195,12 @@
   max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 1440px) {
+  .services__cluster2-content {
+    max-width: 27rem;
+  }
 }
 
 .services__cluster2-imgs-container {
@@ -1403,7 +1440,19 @@
           box-sizing: border-box;
   color: #404040;
   overflow: hidden;
-  padding: 0 1rem 3rem 1rem;
+  padding: 3.5rem 1rem 3rem 1rem;
+}
+
+@media (min-width: 1440px) {
+  .contact {
+    padding-top: 4.5rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .contact__content-wrapper {
+    max-height: 100%;
+  }
 }
 
 .contact__title {
@@ -1412,6 +1461,24 @@
   font-family: "Circular Std Black";
   font-size: 2rem;
   text-align: center;
+}
+
+@media (min-width: 1440px) {
+  .contact__title {
+    font-size: 3.7rem;
+    width: auto;
+  }
+}
+
+@media (min-width: 1440px) {
+  .contact__info-form-map-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .contact__img-text-wrapper {
@@ -1435,6 +1502,22 @@
   }
 }
 
+@media (min-width: 1440px) {
+  .contact__img-text-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 20%;
+    max-width: 17.187rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-right: 0;
+    margin-left: 2rem;
+  }
+}
+
 .contact__img {
   width: 100%;
   display: block;
@@ -1442,9 +1525,23 @@
   max-width: 15.875rem;
 }
 
+@media (min-width: 1440px) {
+  .contact__img {
+    margin-bottom: 2rem;
+  }
+}
+
 @media (min-width: 768px) {
   .contact__text-wrapper {
-    width: 50%;
+    width: 45%;
+  }
+}
+
+@media (min-width: 1440px) {
+  .contact__text-wrapper {
+    width: 90%;
+    max-width: 15.312rem;
+    margin: 0 auto 0 auto;
   }
 }
 
@@ -1492,6 +1589,22 @@
   margin-right: auto;
 }
 
+@media (min-width: 1440px) {
+  .contact__map-form-wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 63rem;
+    width: 80%;
+    margin-left: 6rem;
+    margin-right: 2rem;
+  }
+}
+
 .contact__map {
   height: 100%;
   width: 100%;
@@ -1525,6 +1638,28 @@
           align-items: center;
 }
 
+.contact__map-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+@media (min-width: 1440px) {
+  .contact__map-wrapper {
+    width: 37.75rem;
+    height: 37.75rem;
+    margin-top: 4rem;
+    margin-left: 0;
+    margin-right: 2rem;
+  }
+}
+
 .contact__map-container {
   width: 100%;
   padding-top: 100%;
@@ -1545,6 +1680,27 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 3rem 0 3rem 0;
+}
+
+@media (min-width: 1440px) {
+  .contact__form {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1440px) {
+  .contact__form-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    width: 40%;
+  }
 }
 
 .contact__form-required-fields {
