--- a/client/src/styles/_partials/_contact.scss
+++ b/client/src/styles/_partials/_contact.scss
@@ -7,7 +7,17 @@
   box-sizing: border-box;
   color: $text-color;
   overflow: hidden;
-  padding: 0 1rem 3rem 1rem;
+  padding: 3.5rem 1rem 3rem 1rem;
+
+  @include desktop {
+    padding-top: 4.5rem;
+  }
+
+  &__content-wrapper {
+    @include desktop {
+      max-height: 100%;
+    }
+  }
 
   &__title {
     width: 12rem;
@@ -15,6 +25,18 @@
     font-family: "Circular Std Black";
     font-size: $subtitle-font-size-mobile;
     text-align: center;
+
+    @include desktop {
+      font-size: 3.7rem;
+      width: auto;
+    }
+  }
+
+  &__info-form-map-wrapper {
+    @include desktop {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &__img-text-wrapper {
@@ -30,6 +52,15 @@
       justify-content: space-between;
       max-width: 46rem;
     }
+
+    @include desktop {
+      flex-direction: column;
+      width: 20%;
+      max-width: 17.187rem;
+      justify-content: center;
+      margin-right: 0;
+      margin-left: 2rem;
+    }
   }
 
   &__img {
@@ -37,11 +68,21 @@
     display: block;
     margin: 0 auto 3rem auto;
     max-width: 15.875rem;
+
+    @include desktop {
+      margin-bottom: 2rem;
+    }
   }
 
   &__text-wrapper {
     @include tablet {
-      width: 50%;
+      width: 45%;
+    }
+
+    @include desktop {
+      width: 90%;
+      max-width: 15.312rem;
+      margin: 0 auto 0 auto;
     }
   }
 
@@ -81,6 +122,15 @@
     max-width: 46rem;
     margin-left: auto;
     margin-right: auto;
+
+    @include desktop {
+      flex-direction: row;
+      justify-content: space-between;
+      max-width: 63rem;
+      width: 80%;
+      margin-left: 6rem;
+      margin-right: 2rem;
+    }
   }
 
   &__map {
@@ -109,6 +159,20 @@
       }
     }
 
+    &-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+
+      @include desktop {
+        width: 37.75rem;
+        height: 37.75rem;
+        margin-top: 4rem;
+        margin-left: 0;
+        margin-right: 2rem;
+      }
+    }
+
     &-container {
       width: 100%;
       padding-top: 100%;
@@ -123,6 +187,19 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 3rem 0 3rem 0;
+
+    @include desktop {
+      width: 100%;
+    }
+
+    &-wrapper {
+      @include desktop {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        width: 40%;
+      }
+    }
 
     &-required-fields {
       margin: 0 0 0.4rem 1rem;
